# SymbolicIntegers

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  documentation.config
examples/: example.cpp
include/: base.h  base_monomial.h  base_polynomial.h  base_registry.h  composite.h  composite_ops.h  definitions.h  exceptions.h  extra_ops.h  functions.h  monomial.h  monomial_ops.h  polynomial.h  polynomial_ops.h  registry.h  special.h  symbolic.h  symbolic_integers.h  templated.h
include/impl/: base_monomial_impl.h  base_polynomial_impl.h  base_registry_impl.h  composite_impl.h  composite_ops_impl.h  extra_ops_impl.h  functions_impl.h  monomial_impl.h  monomial_ops_impl.h  polynomial_impl.h  polynomial_ops_impl.h  registry_impl.h  special_impl.h
include/templated/: base.h  extra_ops.h  monomial_ops.h  polynomial_ops.h
src/: base.cpp  base_monomial.cpp  base_polynomial.cpp  base_registry.cpp  extra_ops.cpp  monomial_ops.cpp  polynomial_ops.cpp
tests/: CMakeLists.txt  base_tests.cpp  monomial_test.cpp  polynomial_test.cpp  run_all.cpp  variable_deduction.cpp
